fix mobile navbar on safari

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -219,6 +219,7 @@ nav {
 
     .mobile-nav-links {
       display: block;
+      outline: none;
     }
 
     .nav-toggle {
